--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "jsonwebtoken": "^8.2.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^4.41.0"
+    "sequelize": "^4.41.0",
+    "express": "^4.16.4"
   },
   "devDependencies": {
-    "express": "^4.16.4",
     "nodemon": "^1.18.5"
   }
 }
